--- a/src/widgets/LeaveRequest2/LeaveRequest2.module.scss
+++ b/src/widgets/LeaveRequest2/LeaveRequest2.module.scss
@@ -23,7 +23,32 @@
   @include container();
   position: relative;
 }
+.beforeSubtitle {
+  @include gilroy(300);
+  font-size: rem(20);
+  line-height: 1.5;
+  color: #fff;
+  text-align: center;
+  margin-bottom: rem(30);
 
+  @media (max-width: $max-650) {
+    font-size: rem(16);
+  }
+}
+.beforeTitle {
+  @include noto(500);
+  font-size: rem(40);
+  line-height: 1.3;
+  color: #fff;
+  max-width: rem(670);
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: rem(12);
+
+  @media (max-width: $max-768) {
+    font-size: rem(28);
+  }
+}
 .card {
   background-image: url("../../data/images/modal-bg2.webp");
   background-repeat: no-repeat;
