--- a/src/widgets/LeaveRequestFile/LeaveRequestFile.module.scss
+++ b/src/widgets/LeaveRequestFile/LeaveRequestFile.module.scss
@@ -80,7 +80,7 @@
 .left {
   display: flex;
   flex-direction: column;
-  max-width: rem(740);
+  max-width: rem(650);
   z-index: 2;
 
   @media (max-width: $max-1000) {
@@ -136,6 +136,7 @@
   filter: drop-shadow(0px 0px rem(12) #f28c6b)
     drop-shadow(0px 0px rem(19) #f28c6b);
   width: rem(22);
+  min-width: rem(22);
   height: rem(22);
 }
 .askText {
