--- a/src/app/styles/sanitize.scss
+++ b/src/app/styles/sanitize.scss
@@ -31,17 +31,17 @@ sanitize.css is a CSS library that provides consistent, cross-browser default st
 *,
 ::before,
 ::after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
-*{
-	-webkit-margin-before: 0px;
-	margin-block-start: 0px;
-	-webkit-margin-after: 0px;
-	margin-block-end: 0px;
-	-webkit-margin-start: 0px;
-	margin-inline-start: 0px;
-	-webkit-margin-end: 0px;
-	margin-inline-end: 0px;
+* {
+  -webkit-margin-before: 0px;
+  margin-block-start: 0px;
+  -webkit-margin-after: 0px;
+  margin-block-end: 0px;
+  -webkit-margin-start: 0px;
+  margin-inline-start: 0px;
+  -webkit-margin-end: 0px;
+  margin-inline-end: 0px;
 }
 
 /**
@@ -51,8 +51,8 @@ sanitize.css is a CSS library that provides consistent, cross-browser default st
 
 ::before,
 ::after {
-	text-decoration: inherit; /* 1 */
-	vertical-align: inherit; /* 2 */
+  text-decoration: inherit; /* 1 */
+  vertical-align: inherit; /* 2 */
 }
 
 /**
@@ -66,15 +66,15 @@ sanitize.css is a CSS library that provides consistent, cross-browser default st
 	*/
 
 html {
-	cursor: default; /* 1 */
-	line-height: 1.5; /* 2 */
-	-moz-tab-size: 4; /* 3 */
-	-o-tab-size: 4;
-	   tab-size: 4; /* 3 */
-	-webkit-tap-highlight-color: transparent /* 4 */;
-	-ms-text-size-adjust: 100%; /* 5 */
-	-webkit-text-size-adjust: 100%; /* 5 */
-	word-break: break-word; /* 6 */
+  cursor: default; /* 1 */
+  line-height: 1.5; /* 2 */
+  -moz-tab-size: 4; /* 3 */
+  -o-tab-size: 4;
+  tab-size: 4; /* 3 */
+  -webkit-tap-highlight-color: transparent /* 4 */;
+  -ms-text-size-adjust: 100%; /* 5 */
+  -webkit-text-size-adjust: 100%; /* 5 */
+  word-break: break-word; /* 6 */
 }
 
 /* Sections
@@ -85,7 +85,7 @@ html {
 	*/
 
 body {
-	margin: 0;
+  margin: 0;
 }
 
 /**
@@ -94,7 +94,7 @@ body {
 	*/
 
 h1 {
-	font-size: 2em;
+  font-size: 2em;
 }
 
 /* Grouping content
@@ -109,7 +109,7 @@ dl ol,
 dl ul,
 ol dl,
 ul dl {
-	margin: 0;
+  margin: 0;
 }
 
 /**
@@ -120,7 +120,7 @@ ol ol,
 ol ul,
 ul ol,
 ul ul {
-	margin: 0;
+  margin: 0;
 }
 
 /**
@@ -130,9 +130,9 @@ ul ul {
 	*/
 
 hr {
-	color: inherit; /* 1 */
-	height: 0; /* 2 */
-	overflow: visible; /* 3 */
+  color: inherit; /* 1 */
+  height: 0; /* 2 */
+  overflow: visible; /* 3 */
 }
 
 /**
@@ -140,7 +140,7 @@ hr {
 	*/
 
 main {
-	display: block;
+  display: block;
 }
 
 /**
@@ -149,8 +149,8 @@ main {
 
 nav ol,
 nav ul {
-	list-style: none;
-	padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 /**
@@ -158,7 +158,7 @@ nav ul {
 	*/
 
 nav li::before {
-	content: '\200B';
+  content: "\200B";
 }
 
 /**
@@ -168,10 +168,10 @@ nav li::before {
 	*/
 
 pre {
-	font-family: monospace, monospace; /* 1 */
-	font-size: 1em; /* 2 */
-	overflow: auto; /* 3 */
-	-ms-overflow-style: scrollbar; /* 3 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+  overflow: auto; /* 3 */
+  -ms-overflow-style: scrollbar; /* 3 */
 }
 
 /* Text-level semantics
@@ -182,7 +182,7 @@ pre {
 	*/
 
 a {
-	background-color: transparent;
+  background-color: transparent;
 }
 
 /**
@@ -190,9 +190,9 @@ a {
 	*/
 
 abbr[title] {
-	text-decoration: underline;
-	-webkit-text-decoration: underline dotted;
-	        text-decoration: underline dotted;
+  text-decoration: underline;
+  -webkit-text-decoration: underline dotted;
+  text-decoration: underline dotted;
 }
 
 /**
@@ -201,7 +201,7 @@ abbr[title] {
 
 b,
 strong {
-	font-weight: bolder;
+  font-weight: bolder;
 }
 
 /**
@@ -212,8 +212,8 @@ strong {
 code,
 kbd,
 samp {
-	font-family: monospace, monospace; /* 1 */
-	font-size: 1em; /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /**
@@ -221,7 +221,7 @@ samp {
 	*/
 
 small {
-	font-size: 80%;
+  font-size: 80%;
 }
 
 /* Embedded content
@@ -237,7 +237,7 @@ iframe,
 img,
 svg,
 video {
-	vertical-align: middle;
+  vertical-align: middle;
 }
 
 /**
@@ -246,7 +246,7 @@ video {
 
 audio,
 video {
-	display: inline-block;
+  display: inline-block;
 }
 
 /**
@@ -254,8 +254,8 @@ video {
 	*/
 
 audio:not([controls]) {
-	display: none;
-	height: 0;
+  display: none;
+  height: 0;
 }
 
 /**
@@ -263,7 +263,7 @@ audio:not([controls]) {
 	*/
 
 iframe {
-	border-style: none;
+  border-style: none;
 }
 
 /**
@@ -271,7 +271,7 @@ iframe {
 	*/
 
 img {
-	border-style: none;
+  border-style: none;
 }
 
 /**
@@ -279,7 +279,7 @@ img {
 	*/
 
 svg:not([fill]) {
-	fill: currentColor;
+  fill: currentColor;
 }
 
 /**
@@ -287,7 +287,7 @@ svg:not([fill]) {
 	*/
 
 svg:not(:root) {
-	overflow: hidden;
+  overflow: hidden;
 }
 
 /* Tabular data
@@ -300,9 +300,9 @@ svg:not(:root) {
 	*/
 
 table {
-	border-collapse: collapse; /* 1 */
-	border-color: inherit; /* 2 */
-	text-indent: 0; /* 3 */
+  border-collapse: collapse; /* 1 */
+  border-color: inherit; /* 2 */
+  text-indent: 0; /* 3 */
 }
 
 /* Forms
@@ -318,10 +318,10 @@ input,
 optgroup,
 select,
 textarea {
-	font-family: inherit; /* 1 */
-	font-size: 100%; /* 1 */
-	line-height: 1.15; /* 1 */
-	margin: 0; /* 2 */
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
 }
 
 /**
@@ -330,8 +330,8 @@ textarea {
 	*/
 
 button {
-	overflow: visible; /* 1 */
-	text-transform: none; /* 2 */
+  overflow: visible; /* 1 */
+  text-transform: none; /* 2 */
 }
 
 /**
@@ -339,12 +339,12 @@ button {
 	*/
 
 button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
-	-webkit-appearance: button;
-	-moz-appearance: button;
-	     appearance: button;
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
 }
 
 /**
@@ -353,8 +353,8 @@ button,
 	*/
 
 fieldset {
-	border: 1px solid #a0a0a0; /* 1 */
-	padding: 0.35em 0.75em 0.625em; /* 2 */
+  border: 1px solid #a0a0a0; /* 1 */
+  padding: 0.35em 0.75em 0.625em; /* 2 */
 }
 
 /**
@@ -362,7 +362,7 @@ fieldset {
 	*/
 
 input {
-	overflow: visible;
+  overflow: visible;
 }
 
 /**
@@ -371,10 +371,10 @@ input {
 	*/
 
 legend {
-	color: inherit; /* 2 */
-	display: table; /* 1 */
-	max-width: 100%; /* 1 */
-	white-space: normal; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  white-space: normal; /* 1 */
 }
 
 /**
@@ -383,8 +383,8 @@ legend {
 	*/
 
 progress {
-	display: inline-block; /* 1 */
-	vertical-align: baseline; /* 2 */
+  display: inline-block; /* 1 */
+  vertical-align: baseline; /* 2 */
 }
 
 /**
@@ -392,7 +392,7 @@ progress {
 	*/
 
 select {
-	text-transform: none;
+  text-transform: none;
 }
 
 /**
@@ -402,19 +402,19 @@ select {
 	*/
 
 textarea {
-	margin: 0; /* 1 */
-	overflow: auto; /* 2 */
-	resize: vertical; /* 3 */
-	resize: block; /* 3 */
+  margin: 0; /* 1 */
+  overflow: auto; /* 2 */
+  resize: vertical; /* 3 */
+  resize: block; /* 3 */
 }
 
 /**
 	* Remove the padding in IE 10-.
 	*/
 
-[type='checkbox'],
-[type='radio'] {
-	padding: 0;
+[type="checkbox"],
+[type="radio"] {
+  padding: 0;
 }
 
 /**
@@ -422,11 +422,11 @@ textarea {
 	* 2. Correct the outline style in Safari.
 	*/
 
-[type='search'] {
-	-webkit-appearance: textfield; /* 1 */
-	-moz-appearance: textfield;
-	     appearance: textfield;
-	outline-offset: -2px; /* 2 */
+[type="search"] {
+  -webkit-appearance: textfield; /* 1 */
+  -moz-appearance: textfield;
+  appearance: textfield;
+  outline-offset: -2px; /* 2 */
 }
 
 /**
@@ -435,7 +435,7 @@ textarea {
 
 ::-webkit-inner-spin-button,
 ::-webkit-outer-spin-button {
-	height: auto;
+  height: auto;
 }
 
 /**
@@ -443,8 +443,8 @@ textarea {
 	*/
 
 ::-webkit-input-placeholder {
-	color: inherit;
-	opacity: 0.54;
+  color: inherit;
+  opacity: 0.54;
 }
 
 /**
@@ -452,7 +452,7 @@ textarea {
 	*/
 
 ::-webkit-search-decoration {
-	-webkit-appearance: none;
+  -webkit-appearance: none;
 }
 
 /**
@@ -461,8 +461,8 @@ textarea {
 	*/
 
 ::-webkit-file-upload-button {
-	-webkit-appearance: button; /* 1 */
-	font: inherit; /* 2 */
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
 }
 
 /**
@@ -470,8 +470,8 @@ textarea {
 	*/
 
 ::-moz-focus-inner {
-	border-style: none;
-	padding: 0;
+  border-style: none;
+  padding: 0;
 }
 
 /**
@@ -479,7 +479,7 @@ textarea {
 	*/
 
 :-moz-focusring {
-	outline: 1px dotted ButtonText;
+  outline: 1px dotted ButtonText;
 }
 
 /**
@@ -487,7 +487,7 @@ textarea {
 	*/
 
 :-moz-ui-invalid {
-	box-shadow: none;
+  box-shadow: none;
 }
 
 /* Interactive
@@ -498,7 +498,7 @@ textarea {
 	*/
 
 details {
-	display: block;
+  display: block;
 }
 
 /*
@@ -506,25 +506,25 @@ details {
 	*/
 
 dialog {
-	background-color: white;
-	border: solid;
-	color: black;
-	display: block;
-	height: -moz-fit-content;
-	height: -webkit-fit-content;
-	height: fit-content;
-	left: 0;
-	margin: auto;
-	padding: 1em;
-	position: absolute;
-	right: 0;
-	width: -moz-fit-content;
-	width: -webkit-fit-content;
-	width: fit-content;
+  background-color: white;
+  border: solid;
+  color: black;
+  display: block;
+  height: -moz-fit-content;
+  height: -webkit-fit-content;
+  height: fit-content;
+  left: 0;
+  margin: auto;
+  padding: 1em;
+  position: absolute;
+  right: 0;
+  width: -moz-fit-content;
+  width: -webkit-fit-content;
+  width: fit-content;
 }
 
 dialog:not([open]) {
-	display: none;
+  display: none;
 }
 
 /*
@@ -532,7 +532,7 @@ dialog:not([open]) {
 	*/
 
 summary {
-	display: list-item;
+  display: list-item;
 }
 
 /* Scripting
@@ -543,7 +543,7 @@ summary {
 	*/
 
 canvas {
-	display: inline-block;
+  display: inline-block;
 }
 
 /**
@@ -551,7 +551,7 @@ canvas {
 	*/
 
 template {
-	display: none;
+  display: none;
 }
 
 /* User interaction
@@ -570,7 +570,7 @@ select,
 summary,
 textarea,
 [tabindex] {
-	touch-action: manipulation;
+  touch-action: manipulation;
 }
 
 /**
@@ -578,7 +578,7 @@ textarea,
 	*/
 
 [hidden] {
-	display: none;
+  display: none;
 }
 
 /* Accessibility
@@ -588,8 +588,8 @@ textarea,
 	* Change the cursor on busy elements in all browsers (opinionated).
 	*/
 
-[aria-busy='true'] {
-	cursor: progress;
+[aria-busy="true"] {
+  cursor: progress;
 }
 
 /*
@@ -597,7 +597,7 @@ textarea,
 	*/
 
 [aria-controls] {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 /*
@@ -605,9 +605,9 @@ textarea,
 	* inoperable elements in all browsers (opinionated).
 	*/
 
-[aria-disabled='true'],
+[aria-disabled="true"],
 [disabled] {
-	cursor: not-allowed;
+  cursor: not-allowed;
 }
 
 /*
@@ -615,13 +615,13 @@ textarea,
 	* in all browsers (opinionated).
 	*/
 
-[aria-hidden='false'][hidden] {
-	display: initial;
+[aria-hidden="false"][hidden] {
+  display: initial;
 }
 
-[aria-hidden='false'][hidden]:not(:focus) {
-	clip: rect(0, 0, 0, 0);
-	position: absolute;
+[aria-hidden="false"][hidden]:not(:focus) {
+  clip: rect(0, 0, 0, 0);
+  position: absolute;
 }
 //  Home  Snippets  css  sanitize.css
 //  © 2023 Jon LaBelleBack to top
