--- a/src/widgets/LeaveRequestMini/LeaveRequestMini.module.scss
+++ b/src/widgets/LeaveRequestMini/LeaveRequestMini.module.scss
@@ -43,6 +43,31 @@
     min-height: rem(700);
   }
 }
+.beforeSubtitle {
+  @include gilroy(300);
+  font-size: rem(20);
+  line-height: 1.5;
+  color: #fff;
+  text-align: center;
+  margin-bottom: rem(30);
+
+  @media (max-width: $max-650) {
+    font-size: rem(16);
+  }
+}
+.beforeTitle {
+  @include noto(500);
+  font-size: rem(40);
+  line-height: 1.3;
+  color: #fff;
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: rem(12);
+
+  @media (max-width: $max-768) {
+    font-size: rem(28);
+  }
+}
 .promotion {
   background-image: url("../../data/images/modal_bg3.svg");
   background-repeat: no-repeat;
