--- a/src/widgets/Stocks/Stocks.module.scss
+++ b/src/widgets/Stocks/Stocks.module.scss
@@ -63,6 +63,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  gap: rem(10);
   justify-content: space-between;
   align-items: flex-start;
 }
